# AxonBead

./: .gitignore  README.md  pyproject.toml  requirements.txt
axonbead/: pipeline.py  run_analysis.py
docs/: Protocol.md
docs/example_output/: Summary_Results.xlsx
example_output/: Summary_Results.xlsx
notebooks/: 01_czi_exploration.ipynb  02_axonal_damage_analysis.ipynb
sample_data/sample_output/: Summary_Results.csv
src/: pipeline.py  run_analysis.py
