[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axonbead"
version = "1.0.0"
description = "Axonal bead analysis for neurofilament microscopy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ezra Guerrero Gonzalez", email = "your.email@institute.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "czifile>=2019.7.2",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
axonbead = "axonbead.run_analysis:main"